2014-04-07  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/FiltersToolbox/amrf_seg.m: (0.1.0)

	- AMRF_SEG  Adaptive Markov Random Field segmentation.

	* Add matlab/FiltersToolbox/im_modes.m: (0.1.0)

	- IM_MODES Estimate typical values (modes) of
	foreground/background intensities in a greyscale image.

2014-03-16  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_sphparam.m: (0.1.1)

	- Classical MDS solution is invariant under a mirroring
	transformation. That is, if we had the ground truth, a mirror
	image over the longitude coordinate produces the same stress, but
	with all the triangle orientations inverted. Now we mirror the
	parametrization if this reduces the number of triangles with a
	negative orientation.

2014-03-15  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/cons_smacof_pip.m: (0.3.4)

	- Update default version of SCIP, as now 3.1.0 has been released.

	* Delete matlab/ManifoldToolbox/tri_sphparam_cons_smacof.m:

	- This function has been rewritten as tri_sphparam, to make it
	more modular. Instead of forcing a series of parametrizations
	(namely CMDS followed by constrained SMACOF with local
	neighbourhoods, followed by global constrained SMACOF), we want to
	have a function where we can call individual methods, and that
	it's not limited to the SMACOF approach (we'll want to add the
	spherical harmonics method too).

	* matlab/PointsToolbox/cons_smacof_pip.m: (0.3.3)

	- As the stress can go up and down, now the algorithm remembers
	the best solution is has found among all iterations, and will
	return that one.

	* matlab/ManifoldToolbox/tri_ccqp_smacof_nofold_sph_pip.m: (0.1.3)

	- I forgot to commit the changes to this function when I fixed the
	bug for cons_smacof_pip(). We were doing it wrong when we had
	fixed vertices. We were expecting the distance matrix to be
	d(isFree, isFree). I commited them by mistake with in the last
	commit. I'm not commiting after chaning the version number just so