@@ -1,3 +1,10 @@
+2014-04-22  Ramon Casero  <rcasero@gmail.com>
+
+	* Add matlab/FileFormatToolbox/ndpi_focus_points.m: (0.1.0)
+
+	- NDPI_FOCUS_POINTS Read focus points coordinates from .ndpi image
+	file obtained from a Hamamatsu microscope.
+
 2014-04-07  Ramon Casero  <rcasero@gmail.com>
 
 	* Add matlab/FiltersToolbox/amrf_seg.m: (0.1.0)
